--- a/slides/_posts/2015-12-01-introduction-to-git.html
+++ b/slides/_posts/2015-12-01-introduction-to-git.html
@@ -150,7 +150,7 @@
                     </section>
                     <section>
                         <h2>Git Push</h2>
-                        <pre><code class="hlbash" data-trim contenteditable>
+                        <pre><code class="bash" data-trim contenteditable>
 $ git push origin master
 $ git push teamone master
 $ git push teamone master:newbranch
@@ -165,7 +165,7 @@ $ git push teamone master:newbranch
                     <section>
                         <h2>Git Merge</h2>
                         <p>
-<pre><code class="hlbash" data-trim contenteditable>
+<pre><code class="bash" data-trim contenteditable>
 $ git checout master
 $ git merge experiment
 </code></pre>
@@ -175,7 +175,7 @@ $ git merge experiment
                     <section>
                         <h2>Git Rebase</h2>
                         <p>
-                        <pre><code class="hlbash" data-trim contenteditable>
+                        <pre><code class="bash" data-trim contenteditable>
 $ git checout experiment
 $ git rebase master
 </code></pre>
@@ -185,7 +185,7 @@ $ git rebase master
                     <section>
                         <h2>Fast-forward merge</h2>
                         <p>
-<pre><code class="hlbash" data-trim contenteditable>
+<pre><code class="bash" data-trim contenteditable>
 $ git checout master
 $ git merge experiment
 </code></pre>
@@ -202,7 +202,7 @@ $ git merge experiment
                     <section>
                     <h2>More complex rebases</h2>
                     <p>
-<pre><code class="hlbash" data-trim contenteditable>
+<pre><code class="bash" data-trim contenteditable>
 $ git rebase --onto master server client
 </code></pre>
                     <img src="https://git-scm.com/book/en/v2/book/03-git-branching/images/interesting-rebase-2.png">
@@ -226,7 +226,7 @@ $ git rebase --onto master server client
                     </section>
                     <section>
                         <p>
-<pre><code class="hlbash" data-trim contenteditable>
+<pre><code class="bash" data-trim contenteditable>
 $ git push -f
 </code></pre>
                         <img src="https://git-scm.com/book/en/v2/book/03-git-branching/images/perils-of-rebasing-3.png">
@@ -234,7 +234,7 @@ $ git push -f
                     </section>
                     <section>
                         <p>
-<pre><code class="hlbash" data-trim contenteditable>
+<pre><code class="bash" data-trim contenteditable>
 $ git pull
 </code></pre>
                         <img src="https://git-scm.com/book/en/v2/book/03-git-branching/images/perils-of-rebasing-4.png">
